# stu

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  FloatBuffer.cpp  FloatBuffer.h  oboe_ffi.cpp
android/app/src/main/kotlin/com/example/stu/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: arrangement.dart  audio_clip.dart  track.dart
lib/src/audio/: audio_buffer.dart  audio_channel_view.dart  audio_engine.dart  audio_isolate.dart  audio_permission.dart  oboe_ffi.dart
lib/src/models/: arrangement_model.dart
lib/src/screens/: arrangement_screen.dart  looper_app.dart  looper_app_isolate.dart  looper_screen.dart
lib/src/widets/: track_widget.dart
test/: widget_test.dart
